--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ icecream = "^2.1.3"
 pendulum = "^3.0.0"
 loguru = "^0.7.2"
 seaborn = "^0.13.2"
+scikit-learn = "^1.4.2"
 
 
 [tool.poetry.group.dev.dependencies]
